[project]
name = "mba-ai-governance-llm-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "google-generativeai==0.7.0",
    "matplotlib==3.9.0",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "pandas==1.5.3",
    "plotly>=6.5.2",
    "pypdf2==3.0.1",
    "python-docx>=1.2.0",
    "streamlit==1.36.0",
    "wordcloud>=1.9.5",
]
